--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -341,6 +341,33 @@ h1, h3, h4, h5, p {
   line-height: 33px;
 }
 
+.nav li {
+  display: inline-block;
+  margin: 0 10px;
+  vertical-align: top;
+}
+
+.nav li {
+  margin-right:0;
+}
+
+/* 
+  ====================================
+  Speakers
+  ====================================
+*/
+
+.speaker-info {
+  border: 1px solid #dfe2e5;
+  border-radius: 5px;
+  margin: 88px;
+  padding: 22px 0;
+  text-align: center;
+}
+
+.speaker {
+  margin-bottom: 44px;
+}
 
 
 
